# courier

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
config/: courier.example.yaml
src/: config.rs  discovery.rs  heartbeat.rs  main.rs  pipeline.rs
src/buffer/: mod.rs
src/intelligence/: analyzer.rs  engine.rs  mod.rs  model_manager.rs
src/sinks/: http.rs  mod.rs  s3_parquet.rs
src/sources/: file_source.rs  mod.rs
src/state/: mod.rs
src/transforms/: mod.rs
