[package]
name = "courier"
version = "0.1.0"
edition = "2021"
description = "Guvnor Cloud log courier — lightweight agent for log collection, transform, and S3 delivery"

[[bin]]
name = "courier"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
notify = "7"
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow", "snap", "zstd"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
zstd = "0.13"
anyhow = "1"
async-trait = "0.1"
gethostname = "0.5"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
tokio-util = "0.7"
futures = "0.3"

[features]
default = []
intelligence = ["dep:bitnet-llm"]

[dependencies.bitnet-llm]
version = "1"
optional = true
